--- a/LPP/LPP.csproj
+++ b/LPP/LPP.csproj
@@ -63,6 +63,7 @@
     <Compile Include="LogicComparer.cs" />
     <Compile Include="Negation.cs" />
     <Compile Include="NotAnd.cs" />
+    <Compile Include="ObjectExtension.cs" />
     <Compile Include="Predicate.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
